--- a/flairsou_frontend/templates/flairsou_frontend/index.html
+++ b/flairsou_frontend/templates/flairsou_frontend/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Flairsou</title>
+        {% load static %}
+        <script src="{% static "flairsou_frontend/main.js" %}" defer></script>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flairsou</title>
-</head>
-
-<body>
-    <div id="app">
-        <!-- React will load here -->
-    </div>
-    <noscript>
-        You need to enable JavaScript to run this app.
-    </noscript>
-</body>
-{% load static %}
-<script src="{% static "flairsou_frontend/main.js" %}"></script>
+    <body>
+        <div id="app">
+            <!-- React will load here -->
+        </div>
+        <noscript>
+            You need to enable JavaScript to run this app.
+        </noscript>
+    </body>
 </html>
